-----------

This release includes the following:

* CA-841 - Project flags cleared and disassociated from Collaborative Groups
  (from Kincaid via IM)
* Locks some versions of dependent components
* Updates portal database from profile 4 to 5.  Profile 4 corresponds to
  edrn.nci.nih.gov-4.1-FINAL and was deployed at NCI in December 2011.
* Upgrades to Plone 4.1 and EEA's Faceted Navigation 4.1


1.1.8 — Misc
------------

This release addresses the following:

* CA-812 - WYSIWYG editor is set to "Kupu" in Portal 4, should be "TinyMCE"
* CA-770 - Enable versioning on files


1.1.7 — Fresh Specimens
-----------------------

This release includes the brand new eke.specimens package which simplifies
specimens for reference sets, PRoBE, and ERNE.


1.1.6 — Signing Secrets
-----------------------

This release covers:

* CA-786 - Signing secrets not updated in P4
* CA-782 - plone.app.caching not including in EDRN Portal 4


1.1.5 — Members List Improvements
---------------------------------

This release covers:

* CA-789 - Members list improvements


1.1.4 — Edges So Smooth They Squeak
-----------------------------------

This release:

* Leaves Collaborative Group objects as "private".
* Adds sharing permissions to Collaborative Groups.
* Initially sets the chair and co-chair of Collaborative Groups.
* Honestly enables table sorting for all users.


1.1.3 — Smoother Edges
----------------------

This release includes:

* Table sorting enabled for all users, not just authenticated users
* Upgrades to the Publications tab with AJAX filtering


1.1.2 — Let's Collaborate!
--------------------------

This release includes:

* Collaborative groups, provided by the edrnsite.collaborations package.
* A default collaborative group container at /collaborative-groups.
* UI improvements to users & groups by enabling Plone's "many_users" and
  "many_groups" properties.
* Upgrade improvements.


1.1.1 — Upgrade Cleanup
-----------------------

This release includes the following:
